--- a/HW9_10_WPF/HW9_10_WPF.csproj
+++ b/HW9_10_WPF/HW9_10_WPF.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MaterialDesignThemes" Version="4.2.1" />
     <PackageReference Include="Telegram.Bot" Version="16.0.2" />
   </ItemGroup>
 
