--- a/HW9_10_WPF/HW9_10_WPF.csproj
+++ b/HW9_10_WPF/HW9_10_WPF.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Telegram.Bot" Version="16.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HW9_10\HW9_10.csproj" />
+  </ItemGroup>
+
 </Project>
